Add icons and remove inline style

--- a/static/popup.html
+++ b/static/popup.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
-    <link rel="stylesheet" href="./bulma-tooltip.min.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app" class="container" style="height:350px;width:325px;overflow:scroll"></div>
+    <div id="app" class="container"></div>
     <script src="popup.js"></script>
   </body>
 </html>
