--- a/static/popup.html
+++ b/static/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="bulma.min.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <div id="app" class="container"></div>
