--- a/static/popup.html
+++ b/static/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="bulma.min.css" />
+    <link rel="stylesheet" href="animate.css" />
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
