Move alert UI to iframe to avoid overriding styles in carrier websites

--- a/static/iframe.html
+++ b/static/iframe.html
@@ -3,10 +3,9 @@
   <head>
     <link rel="stylesheet" href="bulma.min.css" />
     <link rel="stylesheet" href="animate.min.css" />
-    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <div id="app" class="container"></div>
-    <script src="popup.js"></script>
+    <div id="postory-tracking-alert-content"></div>
+    <script src="iframe.js"></script>
   </body>
 </html>
